# adventofcode

./: .gitignore  Cargo.toml  README.md  aoc.json  index.js  package.json
2019-nodejs/: .gitignore  LICENSE.md  index.js
2019/lib/arcade/: index.js
2020-2022-rust/: README.md
2020-2022-rust/src/: demo.rs  main.rs
2023-csharp/: .gitignore  AdventOfCode2023.csproj  AdventOfCode2023.sln  Program.cs  README.md  TODO.gitdignore.md  aoc.json
2023-csharp/utils/: Enums.cs  ISolution.cs  SolutionExecution.cs  SolutionExecutionRunInfo.cs
2024-go/: README.md  main.go
2024-go/lib/: solution.go
2024-go/year2024/: days.go
lib/: index.js
src/: demo.rs  main.rs
src/lib/: console.rs  inputs.rs  mod.rs
src/year/: mod.rs
src/year2019/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  mod.rs
src/year2020/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
src/year2021/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day13.rs  day14.rs  day15.rs  day18.rs  day19.rs  day20.rs  day23.rs  day24.rs  day25.rs  demo.rs  mod.rs
src/year2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day07.rs  day08.rs  day11.rs  day12.rs  day13.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
(+357 files in other folders)
