[package]
  name = "adventofcode"
  version = "0.1.0"
  authors = ["ofzza <ofzza@ofzza.com>"]
  edition = "2018"

[profile.dev]
  opt-level = 0
  debug = true
  debug-assertions = true
  overflow-checks = true
  lto = false
  panic = 'unwind'
  incremental = true
  codegen-units = 256
  rpath = false

[profile.release]
  opt-level = 3
  debug = false
  debug-assertions = false
  overflow-checks = false
  lto = true
  panic = 'unwind'
  incremental = false
  codegen-units = 16
  rpath = false

[dependencies]
  regex = "1"
  termion = "*"
